--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<section id="versions">
 		<h3>Version 1.25</h3>
 		<p>The Most Curent Build of AttachMemory</p>
-		<h4><a href="./attachmemory.exe">Download</a> &middot; <a href="./example.html">Source</a></h4>
+		<h4><a href="./attachmemory.exe">Download</a> &middot; <a href="./htu.html">How to use</a> &middot; <a href="./example.html">Source</a></h4>
 	</section>
 </body>
 </html>
