--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 	</section>
 
 	<section id="versions">
+		<h3>Version 1.26</h3>
+		<p>&middot; Fixed Injection Bug.</p>
+		<h4><a href="./builds/1.26/attachmemory.exe">Download</a> &middot; <a href="./builds/1.26/htu.html">How to use</a> &middot; <a href="./builds/1.26/example.html">Source</a></h4>
 		<h3>Version 1.25</h3>
-		<p>The Most Curent Build of AttachMemory</p>
+		<p>Older Build</p>
 		<h4><a href="./builds/1.25/attachmemory.exe">Download</a> &middot; <a href="./builds/1.25/htu.html">How to use</a> &middot; <a href="./builds/1.25/example.html">Source</a></h4>
 	</section>
 </body>
