--- a/builds/1.25/example.html
+++ b/builds/1.25/example.html
@@ -32,7 +32,7 @@ AttachMem::InsertMemory(AttachMem::GetProcessID(<font color="red">"steam"</font>
 		<p>The Most Curent Build of AttachMemory's C++ API Source</p>
 		<h4><a href="./attachmemory.h">Download header file (c++)</a>
 		<h4><a href="#">Download header file (c#)(Coming soon)</a>
-		<h4><a href="./index.html">Go Back</a>
+		<h4><a href="../../index.html">Go Back</a>
 	</section>
 </body>
 </html>
