--- a/builds/1.26/htu.html
+++ b/builds/1.26/htu.html
@@ -26,7 +26,7 @@
 		<p>If you wanted to inject multiple dll's into multiple applications, you could to the following:</p>
 		<code>attachmemory.exe -process hl2 -inject thiscooldll.dll -inject thiscooldll1.dll -process mspaint -inject badpaint.dll -inject yungleanmode.dll</code>
 	<section id="versions">
-		<h4><a href="./index.html">Go Back</a>
+		<h4><a href="../../index.html">Go Back</a>
 	</section>
 </body>
 </html>
