--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 	</section>
 
 	<section id="versions">
+		<h3>Version 1.27</h3>
+		<p>&middot; Added file Checking.</p>
+		<p>&middot; Fixed Really Big bug with loop.</p>
+		<p>&middot; Function AttachMem::fileExists added to source.</p>
+		<h4><a href="./builds/1.27/attachmemory.exe">Download</a> &middot; <a href="./builds/1.27/htu.html">How to use</a> &middot; <a href="./builds/1.27/example.html">Source</a></h4>
 		<h3>Version 1.26</h3>
 		<p>&middot; Fixed Injection Bug.</p>
 		<h4><a href="./builds/1.26/attachmemory.exe">Download</a> &middot; <a href="./builds/1.26/htu.html">How to use</a> &middot; <a href="./builds/1.26/example.html">Source</a></h4>
-		<h3>Version 1.25</h3>
-		<p>Older Build</p>
-		<h4><a href="./builds/1.25/attachmemory.exe">Download</a> &middot; <a href="./builds/1.25/htu.html">How to use</a> &middot; <a href="./builds/1.25/example.html">Source</a></h4>
 	</section>
 </body>
 </html>
