--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 	</section>
 
 	<section id="versions">
+		<h3>Version 1.28</h3>
+		<p>&middot; Fixed Command-Line Issue</p>
+		<p>&middot; Added -wait ms command to delay injections</p>
+		<h4><a href="./builds/1.28/attachmemory.exe">Download</a> &middot; <a href="./builds/1.28/htu.html">How to use</a> &middot; <a href="./builds/1.28/example.html">Source</a></h4>
 		<h3>Version 1.27</h3>
 		<p>&middot; Added file Checking.</p>
 		<p>&middot; Fixed Really Big bug with loop.</p>
