--- a/builds/1.29/example.html
+++ b/builds/1.29/example.html
@@ -20,10 +20,9 @@
 	<pre><code>
 #include <font color="red">"attachmemory.h"</font>;
 
-<font color="blue">if</font> (AttachMem::GetProcessID(<font color="red">"steam"</font>) != <font color="green">0</font>)
-{
-AttachMem::InsertMemory(AttachMem::GetProcessID(<font color="red">"steam"</font>), <font color="red">"C:/steamunlocker.dll"</font>);	
-}
+<font color="blue">char</font>* InjectionResult = AttachMem::InsertMemory(AttachMem::GetProcessID(<font color="red">steam"</font>), <font color="red">"C:/ThisDLL.dll"</font>);
+	<font color="blue">if</font> ( InjectionResult != <font color="red">ATTACHMEMORY_RESULT_OK"</font> )
+	cout << <font color="red">"Error, Reason: "</font> << InjectionResult;
 	
 	</code></pre>
 	
