--- a/builds/1.29/htu.html
+++ b/builds/1.29/htu.html
@@ -25,6 +25,8 @@
 		<code>attachmemory.exe -process hl2 -inject thiscooldll.dll -process mspaint -inject badpaint.dll</code>
 		<p>If you wanted to inject multiple dll's into multiple applications, you could to the following:</p>
 		<code>attachmemory.exe -process hl2 -inject thiscooldll.dll -inject thiscooldll1.dll -process mspaint -inject badpaint.dll -inject yungleanmode.dll</code>
+		<p>You can also now delay injections, here is an example:</p>
+		<code>attachmemory.exe -process pbuster -inject disablepunkbuster.dll -wait 2500 -process bf2 -inject thishack.dll</code>
 	<section id="versions">
 		<h4><a href="../../index.html">Go Back</a>
 	</section>
