--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	</section>
 
 	<section id="versions">
+		<h3>Version 1.29</h3>
+		<p>&middot; Stabilized & Optimized code in general</p>
+		<h4><a href="./builds/1.28/attachmemory.exe">Download</a> &middot; <a href="./builds/1.29/htu.html">How to use</a> &middot; <a href="./builds/1.29/example.html">Source</a></h4>
 		<h3>Version 1.28</h3>
 		<p>&middot; Fixed Command-Line Issue</p>
 		<p>&middot; Added -wait ms command to delay injections</p>
@@ -27,9 +30,6 @@
 		<p>&middot; Fixed Really Big bug with loop.</p>
 		<p>&middot; Function AttachMem::fileExists added to source.</p>
 		<h4><a href="./builds/1.27/attachmemory.exe">Download</a> &middot; <a href="./builds/1.27/htu.html">How to use</a> &middot; <a href="./builds/1.27/example.html">Source</a></h4>
-		<h3>Version 1.26</h3>
-		<p>&middot; Fixed Injection Bug.</p>
-		<h4><a href="./builds/1.26/attachmemory.exe">Download</a> &middot; <a href="./builds/1.26/htu.html">How to use</a> &middot; <a href="./builds/1.26/example.html">Source</a></h4>
 	</section>
 </body>
 </html>
